<resources>
    <string name="app_name">SafeZone</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SafeZone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_safety_guidelines">Safety Guidelines</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_location">Location</string>
    <string name="menu_emergency_services">Emergency Services</string>
    <string name="google_map_key">AIzaSyDhoEpXKV5qHSw1lpzmWHv6-uRH-GPa7sE</string>
</resources>