<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/safetyGuidelines"
            android:icon="@drawable/safety"
            android:title="@string/menu_safety_guidelines" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contacts"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_emergency_services"
            android:icon="@drawable/emergency_guidelines"
            android:title="@string/menu_emergency_services" />
    </group>
</menu>